# project-airbnb-dbt

./: .env copy  .user.yml  README.md  pyproject.toml
airbnb/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
airbnb/data/: glossario.md
airbnb/macros/: string_to_boolean.sql
airbnb/models/marts/: mart_airbnb_amenties_avaliability.sql  mart_airbnb_comment_sentiment.sql  mart_airbnb_occupacy_rate_and_review_score.sql  mart_airbnb_occupancy_analysis.sql  mart_airbnb_occupancy_rate.sql  mart_airbnb_occupancy_rate_by_location_and_price.sql  mart_airbnb_price_analysis.sql  mart_airbnb_price_analysis_test.sql  mart_airbnb_price_vs_availability.sql  mart_airbnb_reviews_summary.sql  mart_caracteristicas_fisicas_ocupacao.sql
airbnb/models/staging/: _airbnb_models.yml  _airbnb_source.yml  stg_airbnb_calendar.sql  stg_airbnb_listings.sql  stg_airbnb_reviews.sql  stg_airbnb_reviews_sentiment.sql
notes/: to-do.md
src/: airbnb_reviews_language_detect.py  airbnb_reviews_sentiment_class.py  data-profiling.py  data-sentiment.py  gcptest.py  load_bigquery.py  main.py
