[tool.poetry]
name = "project-airbnb-dbt"
version = "0.1.0"
description = ""
authors = ["Jose <contatojosevilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
