[tool.poetry]
name = "project-airbnb-dbt"
version = "0.1.0"
description = ""
authors = ["Jose <contatojosevilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
ydata-profiling = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
